gccida/g1/initial_return_save
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initial_return_save/src/dwarf2out.c:1349:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)rtl->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initial_return_save/src/dwarf2out.c:1354:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 900, "initial_return_save"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initial_return_save/src/dwarf2out.c:1360:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 906, "initial_return_save"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initial_return_save/src/dwarf2out.c:1366:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 911, "initial_return_save"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initial_return_save/src/dwarf2out.c:1368:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 894, "initial_return_save"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initial_return_save/src/dwarf2out.c:1379:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 926, "initial_return_save"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initial_return_save/src/dwarf2out.c:1397:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 921, "initial_return_save"); 
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initial_return_save/src/obj/dwarf2out.o] Error 1
